resources/vpc2.json
{
"Resources":
{
"vpc2":
{
"Type":"AWS::EC2::VPC",
"Properties":
{
"CidrBlock":"10.0.0.0/25"
}
},
"subnet1":
{
"Type":"AWS::EC2::Subnet",
"Properties":
{
"VpcId":{"Ref":"vpc2"},
"CidrBlock":"10.0.0.0/26"
}
},
"instance1":
{
"Type":"AWS::EC2::Instance",
"Properties":
{
"ImageId":"ami-0447a12f28fddb066",
"SubnetId":{"Ref":"subnet1"},
"InstanceType":"t2.micro",
"SecurityGroupIds":[{"Ref":"mysecuritygroup"}]
}
},
"mysecuritygroup":
{
"Type":"AWS::EC2::SecurityGroup",
"Properties":
{
"GroupDescription":"my new security group",
"VpcId":{"Ref":"vpc2"},
"SecurityGroupIngress":[
{
"IpProtocol":"tcp",
"FromPort": 22,
"ToPort":22,
"CidrIp":"10.0.0.0/0"
},
{"IpProtocol":"tcp",
"FromPort": 8080,
"ToPort":8080,
"CidrIp":"10.0.0.0/0"
}
]
}
}
}
}
